# swimlib

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  DESIGNS.md  EXAMPLES.md  GITLAB_PAGES.md  GUIDES.md  QUICKSTART.md  README.md  SWIM_Design_Summary.pptx  pyproject.toml
.github/: DEPLOY_CHECKLIST.md
.github/workflows/: docs.yml
docs/: .gitignore  Makefile  README.md  conf.py  index.rst
docs/api/: core.rst  exceptions.rst  f5.rst  netscaler.rst  paloalto.rst  ssh.rst
docs/development/: changelog.rst  contributing.rst  roadmap.rst
docs/examples/: basic_usage.rst  error_handling.rst  f5_upgrade.rst  parallel_execution.rst  testing_strategies.rst
docs/guides/: best_practices.rst  configuration.rst  installation.rst  quickstart.rst  testing.rst  workflows.rst
swimlib/: __init__.py  asdb.py  image_copy.py  image_stage.py  image_upgrade.py  run.py  software_matrix.py  ssh_connect.py
swimlib/f5/: preval.py  run.py
swimlib/f5/actions/: image_copy.py  image_stage.py  image_upgrade.py
swimlib/netscaler/: preval.py  run.py
swimlib/netscaler/actions/: __init__.py  ha_manager.py  image_copy.py  image_stage.py  image_upgrade.py
swimlib/paloalto/: __init__.py
tests/: __init__.py  test_f5_image_copy.py  test_f5_image_stage.py  test_f5_image_upgrade.py  test_f5_preval.py  test_f5_run.py
