[project]
name = "swimlib"
version = "0.1.0"
description = "Production-grade Python SDK for ASDB API with F5 BIG-IP upgrade automation"
authors = [
    {name = "Nick Spell"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paramiko>=3.4.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]
docs = [
    "sphinx>=7.2.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nickspell/swimlib"
Documentation = "https://swimlib.readthedocs.io"
Repository = "https://github.com/nickspell/swimlib"
Issues = "https://github.com/nickspell/swimlib/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "swimlib"
version = "0.1.0"
description = "Production-grade Python SDK for ASDB API with F5 BIG-IP upgrade automation"
authors = ["Nick Spell"]
readme = "README.md"
packages = [{include = "swimlib"}]

[tool.poetry.dependencies]
python = "^3.13"
paramiko = "^3.4.0"
requests = "^2.31.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
furo = "^2024.1.29"
sphinx-copybutton = "^0.5.2"
sphinx-inline-tabs = "^2023.4.21"
myst-parser = "^2.0.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-autosummary-accessors = "^2025.3.1"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=swimlib --cov-report=term-missing"
